// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/TreeView Complex 1`] = `
<div
  dir="ltr"
>
  <div>
    <div
      className="fd-tree fd-tree--header"
    >
      <div
        className="fd-tree__row fd-tree__row--header"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-label="expand all"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            Column Header 1
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 2
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 3
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 4
        </div>
      </div>
    </div>
    <ul
      aria-hidden={false}
      className="fd-tree"
      role="tree"
    >
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-250"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-250"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 1
            </div>
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-251"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                <div>
                  <button
                    aria-controls="fd-251"
                    aria-label="expand"
                    aria-pressed={false}
                    className="fd-tree__control"
                    onClick={[Function]}
                  />
                  Child 1
                </div>
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
            <ul
              aria-hidden={true}
              className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
              role="group"
            >
              <li
                aria-expanded={false}
                className="fd-tree__item"
                id="fd-252"
                role="treeitem"
              >
                <div
                  className="fd-tree__row"
                >
                  <div
                    className="fd-tree__col fd-tree__col--control"
                  >
                    <div>
                      <button
                        aria-controls="fd-252"
                        aria-label="expand"
                        aria-pressed={false}
                        className="fd-tree__control"
                        onClick={[Function]}
                      />
                      Grandchild 1
                    </div>
                  </div>
                  <div
                    className="fd-tree__col"
                  >
                    Data Col 2
                  </div>
                  <div
                    className="fd-tree__col"
                  >
                    Data Col 3
                  </div>
                  <div
                    className="fd-tree__col"
                  >
                    Data Col 4
                  </div>
                </div>
                <ul
                  aria-hidden={true}
                  className="fd-tree__group fd-tree__group--sublevel-3 is-hidden"
                  role="group"
                >
                  <li
                    aria-expanded={false}
                    className="fd-tree__item"
                    id="fd-253"
                    role="treeitem"
                  >
                    <div
                      className="fd-tree__row"
                    >
                      <div
                        className="fd-tree__col fd-tree__col--control"
                      >
                        Great Grandchild 1
                      </div>
                      <div
                        className="fd-tree__col"
                      >
                        Data Col 2
                      </div>
                      <div
                        className="fd-tree__col"
                      >
                        Data Col 3
                      </div>
                      <div
                        className="fd-tree__col"
                      >
                        Data Col 4
                      </div>
                    </div>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-254"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-255"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-255"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 2
            </div>
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-256"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 1
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-257"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-258"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            Row 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-259"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-259"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 4
            </div>
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-260"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 1
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Component API/TreeView Primary 1`] = `
<div
  dir="ltr"
>
  <div>
    <ul
      aria-hidden={false}
      className="fd-tree"
      role="tree"
    >
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-242"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            Row 1
          </div>
        </div>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-243"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-243"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 2
            </div>
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-244"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 1
              </div>
            </div>
          </li>
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-245"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 2
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-246"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-246"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 3
            </div>
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-247"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                <div>
                  <button
                    aria-controls="fd-247"
                    aria-label="expand"
                    aria-pressed={false}
                    className="fd-tree__control"
                    onClick={[Function]}
                  />
                  Child 1
                </div>
              </div>
            </div>
            <ul
              aria-hidden={true}
              className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
              role="group"
            >
              <li
                aria-expanded={false}
                className="fd-tree__item"
                id="fd-248"
                role="treeitem"
              >
                <div
                  className="fd-tree__row"
                >
                  <div
                    className="fd-tree__col fd-tree__col--control"
                  >
                    Grandchild 1
                  </div>
                </div>
              </li>
              <li
                aria-expanded={false}
                className="fd-tree__item"
                id="fd-249"
                role="treeitem"
              >
                <div
                  className="fd-tree__row"
                >
                  <div
                    className="fd-tree__col fd-tree__col--control"
                  >
                    Grandchild 2
                  </div>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Component API/TreeView Rich Tree View 1`] = `
<div
  dir="ltr"
>
  <div>
    <div
      className="fd-tree fd-tree--header"
    >
      <div
        className="fd-tree__row fd-tree__row--header"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-label="expand all"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            Column Header 1
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 2
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 3
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 4
        </div>
      </div>
    </div>
    <ul
      aria-hidden={false}
      className="fd-tree"
      role="tree"
    >
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-261"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-261"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 1
            </div>
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-262"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              />
              <div
                className="fd-tree__col"
              >
                <a
                  href="http://www.google.com"
                >
                  Google
                </a>
              </div>
              <div
                className="fd-tree__col"
              >
                <a
                  href="http://www.bing.com"
                >
                  Bing
                </a>
              </div>
              <div
                className="fd-tree__col"
              >
                <a
                  href="http://www.yahoo.com"
                >
                  Yahoo
                </a>
              </div>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;
